It now compiles for full builds

--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "@sendgrid/mail": "^7.6.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "classnames": "^2.3.1",
     "gsap": "^3.9.1",
-    "little-state-machine": "^4.2.1",
+    "little-state-machine": "^4.8.0",
     "next": "12.0.10",
     "next-seo": "^5.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.27.0",
     "react-icalendar-link": "^3.0.2",
     "react-router": "^6.2.1",
